# bod

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg
bank/app/nfcutils/: nfcutils.py
bank/app/ui/: admin_panel.py  shop_panel.py  user_panel.py
bank/database/: accounts.py  cards.py  database.py  transactions.py  utils.py
bank/models/: __init__.py  models.py  rest.py  schemas.py
bank/server/: server.py
bodpy/: bodpy.py  nfcutils.py
bodpy/nfcutils/: nfcutils.py
bodpy/ui/: admin_panel.py  user_panel.py
cli/: account.py  card.py  cli.py  database.py  transaction.py  utils.py
tests/: conftest.py  test_api.py  test_database.py  test_db_accounts.py  test_db_cards.py
